--- a/includes/bootstrap/css/bootstrap-Y.css
+++ b/includes/bootstrap/css/bootstrap-Y.css
@@ -1,4 +1,4 @@
-@import url("//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700");
 /*!
  * bootswatch v3.3.4
  * Homepage: http://bootswatch.com
@@ -11,7 +11,7 @@ html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  background: url(images/bg.jpg) no-repeat center center fixed; 
+  /* background: url(images/bg.jpg) no-repeat center center fixed;  */
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
